--- a/api-restful/package.json
+++ b/api-restful/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"nodemon index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Miguel Ángel Sanz Muñoz",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.0",
+    "connect-multiparty": "^2.0.0",
     "express": "^4.15.0",
     "mongoose": "^4.8.5",
     "nodemon": "^1.11.0"
